--- a/brainTumorDetection.tex
+++ b/brainTumorDetection.tex
@@ -1,6 +1,21 @@
 \documentclass{article}
 
 \begin{document}
-First document. This is a simple example, with no 
-extra parameters or packages included.
+
+\section{Vocabularies}
+
+\begin{itemize}
+    \item Multispectral volumetric MRI record
+    \item Multimodal (MR images)= T1, T2, FLAIR, post-Gadolinium T1
+    \item Volume
+    \item record
+    \item detection 
+    \item segmentation
+    \item voxel
+    \item tissue = Gewebe
+    \item edma
+    \item Glioma
+    \item Truth image
+\end{itemize}
+
 \end{document}
