--- a/brainTumorDetection.tex
+++ b/brainTumorDetection.tex
@@ -6,16 +6,32 @@
 
 \begin{itemize}
     \item Multispectral volumetric MRI record
-    \item Multimodal (MR images)= T1, T2, FLAIR, post-Gadolinium T1
-    \item Volume
-    \item record
+    \item Multimodal (MR images)= T1, T2, FLAIR, post-Gadolinium T1.\\
+    The two basic types of MRI images are T1-weighted and T2-weighted images.
+    \item T1 = T1 images result in images which highlight fat tissues within the body 
+    \item T2 = T2 images result in images which highlight fat and water within the body
+    \item FLAIR = Fluid attenuated inversion recovery
+    \item \textbf{Volume}
+    \item \textbf{record}
     \item detection 
     \item segmentation
-    \item voxel
+    \item voxel = cubic pixel, element of volume
     \item tissue = Gewebe
-    \item edma
-    \item Glioma
+    \item tissue type = tumor, edema, negative
+    \item edma = also known as fluid retention or swelling, is the buildup of fluid in the body's tissue.
+    \item Glioma = a type of tumor (contains multiple tyes of cancer) that occurs in the brain and spinal cord
     \item Truth image
+    \item Intensity at imaging = 8bit grey scale has 256 different kinds of grey. That is the Intensity
+    \item absolute intensity = 
+    \item slice =
+    \item feature = an individual measurable property or characteristic of a phenomenon being observed
+    \item label = result, decision
+    \item sample = the selection of a subset
+    \item entropy based criteria
+    \item random forest = ensemble learning method which tackles the overfitting problem of single decision trees by selecting the class of a data set through majority count of many trees (forest) which only select a few features randomly. 
+    \item weak learner = a classifier that is only slightly correlated with the true classification (it can label examples better then random guessing)
+    \item stron learner = a classifier that is arbitrarily well-correlated with the true classification
+    \item overfitting = the production of an analysis that corresponds too closely or exactly to a particular set of data, and may therefore fail to fit additional data or predict future observations reliably
 \end{itemize}
 
 \end{document}
