--- a/abstract.tex
+++ b/abstract.tex
@@ -7,6 +7,7 @@
 
 \begin{document}
  \maketitle
+ \newpage
 
  The idea is to enhance and improve the detection and segmentation of brain tumors whereas deciding about its presence is the primary goal of this study. Data used for training and testing decision trees and random forests were obtained from the MICCAI BRATS database. It consists of multiple volumes - meaning three-dimensional images of brains - in different types of images resulting from magnetic resonance imaging: T1, T2, T1 post-Gladinium and FLAIR. These types are called features. The images were generated from 30 glioma patients in different stages. In this study 12 records each containing 4 MRI scans were used. Seeing that four volumes of a record show the same brain differently a way of addressing a single voxel - a 3D-pixel - is needed. Therefore a feature-vector has been designed to point out one specific coordinate in each of the four feature volumes:\\
 
@@ -29,7 +30,7 @@ Having selected a feature at a new node a threshold is being created which will 
 
  Although a random forest can detect most of the tumor pixel in an image we still can achieve a significant improvement through post-processing. Thereby we count how many neighbors of that pixel in a 250-pixel radius are also labeled the same way and improve regardingly. \\
 
- As a result it should be stated that the sample size can strongly influence the classification accuracy of a forest. 
+ As a result using random forest approach to detect brain tumor in MRI scans is a promising method which yields acceptable results. However parameters like sample sizes for training can influence the accuracy of decisions. Also having a high accuracy when training one image and testing on another does not automatically mean that the accuracy will be the same the other way around. The study also shows that post-processing can have a significant influence on the outcome. Segmentation of tumors is proven to be more beneficial when used on small tumors which makes the early detection even more important. 
  
 
 \end{document}
