--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 
  \newpage
 
+ \section{Intention}
  \section{Introduction to ensemble learning methods}
  \subsection{Binary Decision Tree}
  \subsubsection{Basics}
@@ -36,4 +37,7 @@
  \subsection{Segmentation}
 
 
+
+ \section{Sources}
+ 
  \end{document}
