--- a/main.tex
+++ b/main.tex
@@ -4,40 +4,25 @@
 \author{Leonard Brenk}
 
 \begin{document}
- \maketitle
 
- \newpage
+\maketitle
+\newpage
+\tableofcontents
 
- \tableofcontents
+\newpage
 
- \newpage
+    \section{Motivation}
+        \subsection{Motivation}
+        \subsection{Problemstellung - Einsatz von RDF}
+    \section{Basics KI}
+        \subsection{BDT}
+        Nachteile zur Überleitung zur RDF
+        \subsection{Random Forest}
+    \section{Methods in the Paper}
+        \subsection{Goal of the Paper}
+        \subsection{Data, Processing}
+        \subsection{Training, Testing, Post-processing}
+    \section{Results}
+    \section{Conclusion}
 
- \section{Intention}
- \section{Introduction to ensemble learning methods}
- \subsection{Binary Decision Tree}
- \subsubsection{Basics}
- \subsubsection{Training}
- \subsubsection{Testing}
- \subsection{Bagging}
- \subsection{Random Forest}
-
- \section{Introduction to the Paper}
- \subsection{Author, topic, release}
- \subsection{Motivation}
- \subsection{BRATS Data Set}
- \subsection{Data Processing}
-
- \section{Random Forest in Brain MRI}
- \subsection{Training Trees}
- \subsection{Post Processing}
-
- \section{Results}
- \subsection{Sample Size}
- \subsection{Effects of post-processing}
- \subsection{Segmentation}
-
-
-
- \section{Sources}
-
- \end{document}
+\end{document}
