--- a/BDT Calc.tex
+++ b/BDT Calc.tex
@@ -37,4 +37,30 @@
     \text{Humidity = Low: } &H(3,4) = -\Bigg[\frac{3}{7} \log_2\Bigg(\frac{3}{14}\Bigg) + \frac{4}{7} \log_2\Bigg(\frac{4}{7}\Bigg)\Bigg] = 0,9852\\
     \text{Gain: } &H(5,9) - H\Bigg[\frac{7}{14} H(2,5) + \frac{7}{14} H(3,4)\Bigg] = \text{\colorbox{BurntOrange}{0,01615}}
 \end{align*}
+
+RAIN: No
+
+\begin{align*}
+    H(5,2) &= -\Bigg[\frac{5}{7} \log_2\Bigg(\frac{5}{7}\Bigg) + \frac{2}{7} \log_2\Bigg(\frac{2}{7}\Bigg)\Bigg] = 0,8631\\
+\end{align*}
+
+\textbf{Split at Temperature:}
+\begin{align*}
+    \text{Temperature = High: } &H(2,0) = -\Bigg[\frac{2}{2} \log_2\Bigg(\frac{2}{2}\Bigg) + \frac{0}{2} \log_2\Bigg(\frac{0}{2}\Bigg)\Bigg] = 0\\
+    \text{Temperature = Low: } &H(3,2) = -\Bigg[\frac{3}{5} \log_2\Bigg(\frac{3}{5}\Bigg) + \frac{2}{5} \log_2\Bigg(\frac{2}{5}\Bigg)\Bigg] = 0,910\\
+    \text{Gain: } &H(5,2) - H\Bigg[\frac{2}{7} H(2,0) + \frac{5}{7} H(3,2)\Bigg] = \text{\colorbox{BurntOrange}{0,2131}}
+\end{align*}
+\textbf{Split at Windy:}
+\begin{align*}
+    \text{Windy = True: } &H(1,2) = -\Bigg[\frac{1}{3} \log_2\Bigg(\frac{1}{3}\Bigg) + \frac{2}{3} \log_2\Bigg(\frac{2}{3}\Bigg)\Bigg] = 0,9183\\
+    \text{Windy = False: } &H(4,0) = -\Bigg[\frac{4}{4} \log_2\Bigg(\frac{4}{4}\Bigg) + \frac{0}{4} \log_2\Bigg(\frac{0}{4}\Bigg)\Bigg] = 0\\
+    \text{Gain: } &H(5,2) - H\Bigg[\frac{3}{7} H(1,2) + \frac{4}{7} H(4,0)\Bigg] = \text{\colorbox{BurntOrange}{0,4695}}
+\end{align*}
+
+\textbf{Split at Humidity:}
+\begin{align*}
+    \text{Humidtiy = High: } &H(2,1) = -\Bigg[\frac{2}{3} \log_2\Bigg(\frac{2}{3}\Bigg) + \frac{1}{3} \log_2\Bigg(\frac{1}{3}\Bigg)\Bigg] = 0,9183\\
+    \text{humidity = Low: } &H(3,1) = -\Bigg[\frac{3}{4} \log_2\Bigg(\frac{3}{4}\Bigg) + \frac{1}{4} \log_2\Bigg(\frac{1}{4}\Bigg)\Bigg] = 0,8113\\
+    \text{Gain: } &H(5,2) - H\Bigg[\frac{3}{7} H(2,1) + \frac{4}{7} H(3,1)\Bigg] < \text{\colorbox{BurntOrange}{0,1}}
+\end{align*}
 \end{document}
