Calc Information Gain

--- a/BDT Calc.tex
+++ b/BDT Calc.tex
@@ -91,4 +91,8 @@ Rain: no, windy: False
 \begin{align*}
     DS = \frac{2\text{TP}}{2TP + FP + FN}
 \end{align*}
+
+\begin{align*}
+    \text{Information Gain } = \text{Entropy}(\text{Parent}) - \text{Average Entropy}(\text{Children})
+\end{align*}
 \end{document}
